--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="top">Createur de question en ligne</div>
-<div id="mid"><br>Bienvenue sur notre site<br>Ce site vou permetra de creer des questions a choix multiples et de generer des feuille d'exercice a partir de celle-ci<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+<div id="mid"><br><form></form><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
 <div id="bot">
 <a href="./">Acceuil</a>
 <a href="register">S'enregistrer</a>
