--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,20 @@
+#top {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    text-align: center;
+    background-color: rgb(88, 25, 25);color : white;
+}
 
+#mid {
+    background-color: rgb(2, 2, 128);
+    color : white;
+}
+
+#bot {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: rgb(73, 20, 20);
+}
