--- a/templates/register.html
+++ b/templates/register.html
@@ -9,15 +9,31 @@
 </head>
 <body>
 <div id="top">Createur de question en ligne</div>
-<div id="mid"><br><form></form><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+<div id="mid"><br>
+    <form action = "" method = "post">
+        <div class="entree">
+            <label for="idUser">Entrez votre nom d'utilisateur : </label>
+            <input type="text" name="idUser" minlength="2" placeholder="Nom d'utilisateur" required>
+        </div>
+        <div class="entree">
+            <label for="nom">Entrez votre adresse mail : </label>
+            <input type="email" name="email" placeholder="Adresse Mail" required>
+        </div>
+        <div class="entree">
+            <label for="name">Entrez votre mot de passe : </label>
+            <input type="password" name="password" minlength="2" placeholder="Mot de passe" required>
+        </div>
+        <input type = "submit" value = "Valider" />
+
+
+    </form>
+</div>
 <div id="bot">
 <a href="./">Acceuil</a>
 <a href="register">S'enregistrer</a>
-<a href="register">Se connecter</a>
 <a href="login">Se connecter</a>
 <a href="creationQuestion">Creer une question</a>
 <a href="BDD">Liste de vos questions</a>
-<a href="register">Se connecter</a>
 <a href="creerfeuille">Creer une feuille d'exercice</a>
 </div>
 </body>
