--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -9,16 +9,14 @@
 </head>
 <body>
 <div id="top">Createur de question en ligne</div>
-<div id="mid"><br>Bienvenue sur notre site<br>Ce site vou permetra de creer des questions a choix multiples et de generer des feuille d'exercice a partir de celle-ci<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+<div id="mid"><br>Bienvenue sur notre site<br>Ce site vous permettra de creer des questions à choix multiples et de générer des feuilles d'exercices à partir de celles-ci<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
 <div id="bot">
 <a href="./">Acceuil</a>
 <a href="register">S'enregistrer</a>
-<a href="register">Se connecter</a>
 <a href="login">Se connecter</a>
-<a href="creationQuestion">Creer une question</a>
+<a href="creationQuestion">Créer une question</a>
 <a href="BDD">Liste de vos questions</a>
-<a href="register">Se connecter</a>
-<a href="creerfeuille">Creer une feuille d'exercice</a>
+<a href="creerfeuille">Créer une feuille d'exercices</a>
 </div>
 </body>
 
