--- a/templates/register.html
+++ b/templates/register.html
@@ -32,9 +32,9 @@
 <a href="./">Acceuil</a>
 <a href="register">S'enregistrer</a>
 <a href="login">Se connecter</a>
-<a href="creationQuestion">Creer une question</a>
+<a href="creationQuestion">Créer une question</a>
 <a href="BDD">Liste de vos questions</a>
-<a href="creerfeuille">Creer une feuille d'exercice</a>
+<a href="creerfeuille">Créer une feuille d'exercices</a>
 </div>
 </body>
 
