--- a/templates/creationQuestion.html
+++ b/templates/creationQuestion.html
@@ -3,17 +3,39 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/creationQuestion.css">
   <script></script>
   <title>Commande</title>
-  <script>
-  var rep ="";
+  <script type="text/javascript">
+  var rep_li = [];
+  
   function ajout_rep(){
-    txt =getElementById(nrep);
+    txt =document.getElementById('nrep').value;
 
-    if(rep == ""){
-    rep = txt;}
-    else{rep = rep + ";" + txt
+
+    rep_li.push(txt);
+    //console.log(rep_li)
+    document.getElementById('li_rep_possibles').value=""+rep_li.join(";");
+    
+    num = 0
+    document.getElementById('rep_possibles').innerHTML ="";
+    for(element in rep_li){
+        document.getElementById('rep_possibles').innerHTML = document.getElementById("rep_possibles").innerHTML + 
+        ' <span id = "rep_en_cours"> <input type="checkbox" id="'+num +'" name="'+num +'">'+rep_li[element]+'<input type="button" name="suprep" id="suprep" onclick="supp_rep('+num+')" value="Supprimer !"> </span><br>';
+        num=num+1;
     }
+    document.getElementById('li_rep_possibles').value=num;
+  }
+  function supp_rep(n){
+      rep_li.splice(n,1);
+      num = 0
+    document.getElementById('rep_possibles').innerHTML ="";
+    for(element in rep_li){
+        document.getElementById('rep_possibles').innerHTML = document.getElementById("rep_possibles").innerHTML + 
+        ' <span id = "rep_en_cours"> <input type="checkbox" id="'+num +'" name="'+num +'">'+rep_li[element]+'<input type="button" name="suprep" id="suprep" onclick="supp_rep('+num+')" value="Supprimer !"> </span><br>';
+        num=num+1;
+    }
+    document.getElementById('li_rep_possibles').value=num;
   }
   </script>
 </head>
@@ -28,27 +50,26 @@
         <label for="etiquettes">Entrer la/les etiquettes de votre question (séparé par des ";") : </label>
         <input type="text" name="etiquettes" id="etiquettes">
     </div>
-    <div class="entree">
-        <label for="question">Entrer la/les etiquettes de votre question (séparé par des ";") : </label>
-        <input type="text" name="question" id="question">
-    </div>
+
     
     <div class="entree">
         <label for="nouvelle_rep">Entrer une reponse et cliquez sur ajouter : </label>
         <input type="text" name="nrep" id="nrep">
+        <input type="text" name="li_rep_possibles" id="li_rep_possibles" hidden>
+        <input type="number" name="nb_rep_possibles" id="nb_rep_possibles" hidden>
+        <input type="button" name="ajoutrep" id="ajoutrep" onclick="ajout_rep()" value="Ajouter !"> <BR>Cochez la/les reponses !
     </div>
-    
-    <input type="checkbox" id="scales" name="scales" checked>
+    <div id = "rep_possibles">
+    </div><br>
+    <input type="submit" name="submit" id="submit" value ="Ajouter la question !">
 </form><br><br></div>
 <div id="bot">
 <a href="./">Acceuil</a>
-<a href="register">S'enregistrer</a>
-<a href="register">Se connecter</a>
-<a href="login">Se connecter</a>
-<a href="creationQuestion">Creer une question</a>
-<a href="BDD">Liste de vos questions</a>
-<a href="register">Se connecter</a>
-<a href="creerfeuille">Creer une feuille d'exercice</a>
+<a href="./register">S'enregistrer</a>
+<a href="./login">Se connecter</a>
+<a href="./creationQuestion">Creer une question</a>
+<a href="./BDD">Liste de vos questions</a>
+<a href="./creerfeuille">Creer une feuille d'exercice</a>
 </div>
 </body>
 
