--- a/templates/creationQuestion.html
+++ b/templates/creationQuestion.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/creationQuestion.css">
+  <link rel="stylesheet" href="static/main.css">
+  <link rel="stylesheet" href="static/creationQuestion.css">
   <script></script>
   <title>Commande</title>
   <script type="text/javascript">
@@ -65,11 +65,11 @@
 </form><br><br></div>
 <div id="bot">
 <a href="./">Acceuil</a>
-<a href="./register">S'enregistrer</a>
-<a href="./login">Se connecter</a>
-<a href="./creationQuestion">Creer une question</a>
-<a href="./BDD">Liste de vos questions</a>
-<a href="./creerfeuille">Creer une feuille d'exercice</a>
+<a href="/register">S'enregistrer</a>
+<a href="/login">Se connecter</a>
+<a href="/creationQuestion">Créer une question</a>
+<a href="/BDD">Liste de vos questions</a>
+<a href="/creerfeuille">Créer une feuille d'exercices</a>
 </div>
 </body>
 
