--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -2,14 +2,14 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="static/main.css">
   <script></script>
   <title>Commande</title>
   <script></script>
 </head>
 <body>
-<div id="top">Createur de question en ligne</div>
-<div id="mid"><br>Bienvenue sur notre site<br>Ce site vous permettra de creer des questions à choix multiples et de générer des feuilles d'exercices à partir de celles-ci<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+<div id="top">Créateur de question en ligne</div>
+<div id="mid"><br>Bienvenue sur notre site<br>Ce site vous permettra de créer des questions à choix multiples et de générer des feuilles d'exercices à partir de celles-ci<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
 <div id="bot">
 <a href="./">Acceuil</a>
 <a href="register">S'enregistrer</a>
