--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="static/main.css">
   <script></script>
   <title>Commande</title>
   <script></script>
