--- a/templates/BDD.html
+++ b/templates/BDD.html
@@ -8,6 +8,8 @@
   <script>
   function filtrage_par_eti(etiquette_filtre){
   //changer onclick button
+  document.getElementById(etiquette_filtre+'-bouton').style="background-color : blue";
+  document.getElementById(etiquette_filtre+'-bouton').activer="oui"
   var elements = document.getElementsByClassName("eti");
     for(var i = 0; i < elements.length; i++) {
         li_eti = elements[i].innerHTML.split(";");
@@ -17,21 +19,43 @@
     }
     }
   function deactiver_filtrage(etiquette_filtre){
+    document.getElementById(etiquette_filtre+'-bouton').style="background-color : white";
+    document.getElementById(etiquette_filtre+'-bouton').activer="non"
+    var elements = document.getElementsByClassName("bouton");
+    for(var i = 0; i < elements.length; i++) {
+        if(elements[i].activer=="oui"){
+            eti = elements[i].id.split("-")[0];//si bouton activer
+            var eti_exercices = document.getElementsByClassName("eti");
+                for(var j = 0; j < eti_exercices.length; j++) {
+                    li_eti = eti_exercices[j].innerHTML.split(";");
+                        if(! (li_eti.includes(etiquette_filtre))){
+                            elements[i].parentElement.setAttribute("hidden", true);
+        }
+    }
+        }
+        
+
+    }
   }
   function bouton_filtrage(){//on fait la liste de toutes les etiquettes existantes et on fait les boutons de filtrage
   li_eti_total = [];
+    var dict = {};//on creer un objet qui sert de dictionnaire
+
     var elements = document.getElementsByClassName("eti");
     for(var i = 0; i < elements.length; i++) {
       li_eti = elements[i].innerHTML.split(";");
       for(var j=0; j<li_eti.length; j++){
       if(!(li_eti_total.includes(li_eti[j]))){
       li_eti_total.push(li_eti[j]);
+      dict[li_eti[j]]=1;
+      }else{
+        dict[li_eti[j]]= dict[li_eti[j]] +1;
       }
       }
   }
   for ( var i = 0; i<li_eti_total.length;i++){
     document.getElementById("boutons_de_filtrage").innerHTML = document.getElementById("boutons_de_filtrage").innerHTML +
-    '<button id='+li_eti_total[i]+'-'+bouton+' onclick=filtrage_par_eti('+li_eti_total[i]+')';
+    '<button class="bouton" id="'+li_eti_total[i]+'-bouton" onclick=filtrage_par_eti('+li_eti_total[i]+') value='+li_eti_total[i]+'('+dict[li_eti_total[i]]+') style="background-color : white" activer="non" >';
   }
 }
     </script>
@@ -42,7 +66,7 @@
 <div id="boutons_de_filtrage"></div>
     <table>
     {% for dico in li_dictionnaire: %}
-    <tr><td>{{dico["ID"]}}</td><td>{{dico["ID"]}}</td><td class = "eti">{% for eti in dico["ET"]: %}{{eti+","}}{%endfor%}</td><td>{{dico["ID"]}}</td></tr>
+    <tr><td>{{dico["ID"]}}</td><td>{{dico["ID"]}}</td><td class = "eti">{% for eti in dico["ET"]: %}{{eti+";"}}{%endfor%}</td><td>{{dico["ID"]}}</td></tr>
 {% endfor %}
 </table>
 
