--- a/templates/creationQuestion.html
+++ b/templates/creationQuestion.html
@@ -28,7 +28,7 @@
   }
   function supp_rep(n){
       rep_li.splice(n,1);
-      num = 0
+      num = 0;
     document.getElementById('rep_possibles').innerHTML ="";
     for(element in rep_li){
         document.getElementById('rep_possibles').innerHTML = document.getElementById("rep_possibles").innerHTML + 
