--- a/templates/creationQuestion.html
+++ b/templates/creationQuestion.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/creationQuestion.css">
+  <link rel="stylesheet" href="static/main.css">
+  <link rel="stylesheet" href="static/main.css">
   <script></script>
   <title>Commande</title>
   <script type="text/javascript">
