--- a/static/main.css
+++ b/static/main.css
@@ -23,5 +23,5 @@ table, th, td {
     border: 1px solid;
   }
 
-body{background-color: rgb(2, 2, 128);
+body{background-color: rgb(2, 2, 128);padding-top: 70px;
 }
