--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
         <input type = "submit" value = "Valider" />
 
     </form>
-</div>
+</div><!--FAIRE IF CONNECXION RATE-->
 <div id="bot">
 <a href="/">Acceuil</a>
 <a href="register">S'enregistrer</a>
