--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
 <div id="mid"><br>
     {% if erreur == True: %}
     <div style="color: darkred; padding: 20px;">Nom d'utilisateur ou mot de passe incorrect</div>
-    {%endif}
+    {%endif%}
     <form action = "" method = "post">
         <div class="entree">
             <label for="idUser">Entrez votre nom d'utilisateur : </label>
