--- a/templates/BDD.html
+++ b/templates/BDD.html
@@ -3,18 +3,19 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="static/main.css" />
-		<script src='mermaid.js'></script><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/styles/atom-one-dark.min.css"/>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/highlight.min.js"></script>
-  <script src="load-mathjax.js" async></script></head>
-  <script>hljs.initHighlightingOnLoad()
-    window.addEventListnener('load',() =>{
-      let codeBlock=body.getElementsByTagName('code');
-      for(let i in codeBlock)
-      {
-        hljs.highlightBlock(codeBlock[i]);
-      }
-     });
-   </script>
+		<script src="../static/mermaid.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/styles/atom-one-dark.min.css"/>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.2.0/highlight.min.js"></script>
+		<script src="../static/load-mathjax.js" async></script>
+		<script>hljs.initHighlightingOnLoad()
+		  window.addEventListener('load',() =>{
+			let codeBlock=document.getElementsByTagName('code');
+			for(let i in codeBlock)
+			{
+			  hljs.highlightBlock(codeBlock[i]);
+			}
+		   });
+		 </script>
 		<title>Commande</title>
 		<script>
 			function filtrage_par_eti(etiquette_filtre) {
@@ -137,7 +138,7 @@
 					
 					<td class="eti">
 						{% for eti in dico["ET"]: %}{{eti+";"}}{%endfor%}
-					</td><td>{{dico["Question"]}}</td><td>{% for rep in dico["REP"]: %}{%if not loop.last%}{{rep+"; "}}{%else%}{{rep}}{%endif%}{%endfor%}</td>
+					</td><td>{{dico["Question"]| safe}}</td><td>{% for rep in dico["REP"]: %}{%if not loop.last%}{{rep+"; "}}{%else%}{{rep}}{%endif%}{%endfor%}</td>
 					<td>{% for rep in dico["BREP"]: %}{%if not loop.last%}{{rep+"; "}}{%else%}{{rep}}{%endif%}{%endfor%}</td>
 				</tr>
 				{% endfor %}
