--- a/static/main.css
+++ b/static/main.css
@@ -18,7 +18,7 @@
     background-color: rgb(137, 226, 211);
 }
 
-table, th, td {
+th, td {
     border: 1px solid;
 }
 
@@ -42,3 +42,5 @@ body{background-color: rgb(255, 255, 255);padding-top: 70px;
     height: 150px; 
     margin: 10px
 }
+
+
