--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,9 @@
   <script></script>
 </head>
 <body>
-<div id="top">Createur de question en ligne</div>
+    <div class="nom">NomDuSite</div>
+    <div class="menuDeco"> </div>
+
 <div id="mid"><br>
     {% if erreur == True: %}
     <div style="color: darkred; padding: 20px;">Nom d'utilisateur ou mot de passe incorrect</div>
@@ -25,7 +27,7 @@
         <input type = "submit" value = "Valider" />
 
     </form>
-</div><!--FAIRE IF CONNECXION RATE-->
+</div>
 <div id="bot">
 <a href="/">Acceuil</a>
 <a href="register">S'enregistrer</a>
