--- a/templates/BDD.html
+++ b/templates/BDD.html
@@ -138,7 +138,7 @@
 						<th>ID</th><th>Etiquettes</th>
 						<th>Enoncé</th>
 						<th>Reponses Possibles</th>
-						<th>Bonnes reponses</th><th>Visualiser</th><th>Modifier</th><th>Suprimer</th>
+						<th>Bonnes reponses</th><th>Visualiser</th><th>Modifier</th><th>Supprimer</th>
 					</tr>
 				</thead>
 				{% for dico in li_dictionnaire: %}
