--- a/templates/modificationQuestion.html
+++ b/templates/modificationQuestion.html
@@ -70,7 +70,7 @@
     
     <div class="entree">
         <label for="etiquettes">Entrer la/les etiquettes de votre question (séparé par des ";") : </label>
-        <input type="text" name="etiquettes" id="etiquettes" value='{% for eti in dico["ET"]: %}{%if not loop.last%}{{eti+"; "}}{%else%}{{eti}}{%endif%}{%endfor%}'>
+        <input type="text" name="etiquettes" id="etiquettes" value='{% for eti in dictionnaire["ET"]: %}{%if not loop.last%}{{eti+"; "}}{%else%}{{eti}}{%endif%}{%endfor%}'>
     </div>
 
     
