--- a/templates/acceuil_connecte.html
+++ b/templates/acceuil_connecte.html
@@ -16,7 +16,7 @@
 <a href="login">Se connecter</a>
 <a href="creationQuestion">Créer une question</a>
 <a href="BDD">Liste de vos questions</a>
-<a href="creerfeuille">Créer une feuille d'exercices</a>
+<a href="creationFeuille">Créer une feuille d'exercices</a>
 </div>
 </body>
 
