--- a/templates/BDD.html
+++ b/templates/BDD.html
@@ -129,7 +129,18 @@
 		</script>
 	</head>
 	<body onload="bouton_filtrage()">
-		<div id="top">Createur de question en ligne</div>
+		<div class="nom">NomDuSite</div>
+		<ul class="menu">
+			<li>
+				Invité
+				<ul class="sousMenu">
+					<li><a href="/">Accueil</a></li>
+					<li><a href="BDD">Liste de vos questions</a></li>
+					<li><a href="creationQuestion">Créer une question</a></li>
+					<li><a href="CreationFeuille">Créer une feuille d'exercices</a></li>
+				</ul>
+			</li>
+		</ul>
 		<div id="mid">
 			<div id="boutons_de_filtrage"></div>
 			<table class="tableau_css">
