--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -8,7 +8,17 @@
   <script></script>
 </head>
 <body>
-<div id="top">Créateur de question en ligne</div>
+  <div class="nom">NomDuSite</div>
+  <ul class="menu">
+      <li>
+          Invité
+          <ul class="sousMenu">
+              <li><a href="/">Accueil</a></li>
+              <li><a href="login">Se connecter</a></li>
+              <li><a href="register">S'enregistrer</a></li>
+          </ul>
+      </li>
+  </ul>
 <div id="mid"><br>Bienvenue sur notre site<br>Ce site vous permettra de créer des questions à choix multiples et de générer des feuilles d'exercices à partir de celles-ci<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
 <div id="bot">
 <a href="./">Acceuil</a>
