--- a/templates/non_connecte.html
+++ b/templates/non_connecte.html
@@ -8,7 +8,17 @@
   <script></script>
 </head>
 <body>
-<div id="top">Créateur de question en ligne</div>
+  <div class="nom">NomDuSite</div>
+  <ul class="menu">
+      <li>
+          Invité
+          <ul class="sousMenu">
+              <li><a href="/">Accueil</a></li>
+              <li><a href="login">Se connecter</a></li>
+              <li><a href="register">S'enregistrer</a></li>
+          </ul>
+      </li>
+  </ul>
 <div id="mid"><br>Vous tentez d'acceder a une partie protégés du site. Afin d'y acceder vous pouvez gratuitement creer une compte <a href="register">ici</a>.<br></div>
 <div id="bot">
 <a href="./">Acceuil</a>
