--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,17 @@
   <script></script>
 </head>
 <body>
-<div id="top">Createur de question en ligne</div>
+    <div class="nom">NomDuSite</div>
+    <ul class="menu">
+        <li>
+            Invité
+            <ul class="sousMenu">
+                <li><a href="/">Accueil</a></li>
+                <li><a href="login">Se connecter</a></li>
+                <li><a href="register">S'enregistrer</a></li>
+            </ul>
+        </li>
+    </ul>
 <div id="mid"><br>
     <form action = "" method = "post">
         <div class="entree">
